tests/errors/cLayoutNotExtern.milo
// @error: only 'extern struct' has a C layout to verify
// A plain Milo struct has no C counterpart, so there's nothing to check it against.
@cLayout("struct timespec", "time.h")
struct Timespec {
    tv_sec: i64,
    tv_nsec: i64,
}

fn main() {
    print(sizeOf<Timespec>())
}
